--- a/Cargo.toml
+++ b/Cargo.toml
@@ -172,15 +172,10 @@ ya-service-api-interfaces = { path = "core/serv-api/interfaces" }
 ya-service-api-web = { path = "core/serv-api/web" }
 
 ## SERVICE BUS
-ya-service-bus = { path = "../ya-service-bus" }
-ya-sb-proto = { path = "../ya-service-bus/crates/proto" }
-ya-sb-router = { path = "../ya-service-bus/crates/router" }
-ya-sb-util = { path = "../ya-service-bus/crates/util" }
-
-#ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "b59a415ca00aecf83cf3df78fe032ee067344620"}
-#ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "b59a415ca00aecf83cf3df78fe032ee067344620"}
-#ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "b59a415ca00aecf83cf3df78fe032ee067344620"}
-#ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "b59a415ca00aecf83cf3df78fe032ee067344620"}
+ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "fe78d2f49986ff45152555866cca46d212d437f6"}
+ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "fe78d2f49986ff45152555866cca46d212d437f6"}
+ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "fe78d2f49986ff45152555866cca46d212d437f6"}
+ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "fe78d2f49986ff45152555866cca46d212d437f6"}
 
 ## CLIENT
 #ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "fded326374f6fd92c7c523c4e35494cd4c701e41" }
