--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -16,6 +16,7 @@ gftp = { version = "^0.2"}
 actix-http = "2.2"
 actix-rt = "1.1"
 awc = { version = "2.0", features = ["openssl"] }
+# async-compression 0.3.8+ deprecates the "stream" module
 async-compression = { version = "=0.3.7", features = ["stream", "bzip2", "gzip", "xz"] }
 bytes = "0.5.4"
 futures = "0.3.4"
