--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -40,7 +40,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
-tokio = { version = "1.6", features = ["fs"] }
+tokio = { version = "1.6", features = ["fs", "signal", "macros"] }
 uint = "0.7"
 uuid = { version = "0.8", features = ["v4"] }
 humantime="2.0.1"
@@ -54,8 +54,7 @@ ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
 
 actix-rt = "2.2"
-
-rand = "0.7"
+rand = "0.8"
 # Lock ethsign on this commit to match parity-crypto=0.6 from zksync_eth_client
 ethsign = { git = "https://github.com/tomusdrw/ethsign.git", rev = "1b93031d2c45f3a3313e5418876b3d3e751ba87e" }
 # TODO: Upgrade to latest = 0.8 after zksync_eth_client is updated
