--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -20,9 +20,9 @@ readme = "README.md"
 python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.14"
-#goth = "^0.3"
+goth = "^0.4"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", rev = "8e56cc943005dbc8d74f0f5d9f4c5f672893bc63" }
+#goth = { git = "https://github.com/golemfactory/goth.git", rev = "8e56cc943005dbc8d74f0f5d9f4c5f672893bc63" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
