--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ ya-metrics = "0.1"
 ya-net = { version = "0.2", features = ["service"] }
 ya-payment = "0.2"
 ya-persistence = "0.2"
-ya-sb-proto = "0.3"
+ya-sb-proto = "0.4"
 ya-sb-router = "0.4"
 ya-service-api = "0.1"
 ya-service-api-derive = "0.1"
@@ -169,10 +169,10 @@ ya-service-api-interfaces = { path = "core/serv-api/interfaces" }
 ya-service-api-web = { path = "core/serv-api/web" }
 
 ## SERVICE BUS
-#ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "c4f16a69be383d9534f99928fccb64a558c47ff2"}
-#ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "c4f16a69be383d9534f99928fccb64a558c47ff2"}
-#ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "c4f16a69be383d9534f99928fccb64a558c47ff2"}
-#ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "c4f16a69be383d9534f99928fccb64a558c47ff2"}
+ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "642d57335b8f1ae4c84509b96e8a280a870ce81d"}
+ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "642d57335b8f1ae4c84509b96e8a280a870ce81d"}
+ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "642d57335b8f1ae4c84509b96e8a280a870ce81d"}
+ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "642d57335b8f1ae4c84509b96e8a280a870ce81d"}
 
 ## CLIENT
 #ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "fded326374f6fd92c7c523c4e35494cd4c701e41" }
