--- a/.github/workflows/nightly-goth.yml
+++ b/.github/workflows/nightly-goth.yml
@@ -94,7 +94,7 @@ jobs:
           BRANCH_NAME: ${{ matrix.branch }}
           DISCORD_AVATAR: https://i.imgur.com/EOX16Mx.jpg
           DISCORD_USERNAME: 'Goth night watch'
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_WEBHOOK: ${{ secrets.GOTH_DISCORD_WEBHOOK }}
           REPO_NAME: ${{ github.repository }}
           WORKFLOW_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
         with:
