--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -14,10 +14,8 @@ hybrid-net = []
 ya-core-model = { version = "^0.6", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "46c83612d37ba336a3a1228188e9dc941ffb8c64" }
-#ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "46c83612d37ba336a3a1228188e9dc941ffb8c64" }
-ya-relay-client = { path = "../../../ya-relay/client" }
-ya-relay-core = { path = "../../../ya-relay/crates/core" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "8bbb42abc878f94cd663677b0d47ddfa4ccf24c0" }
+ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "8bbb42abc878f94cd663677b0d47ddfa4ccf24c0" }
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
