--- a/core/payment-driver/erc20/Cargo.toml
+++ b/core/payment-driver/erc20/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0"
 awc = { version = "2.0", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
+derive_more = "0.99"
 ethabi = "14.1"
 ethereum-types = "0.11"
 futures = "0.3"
