--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,10 +15,11 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "b5d6b5bcf2276c3143e0b967a8666869afaab8c4", optional = true }
+
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.19", optional = true }
 url = { version = "2.2", optional = true }
 
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", branch = "mf/outbound-inet", optional = true }
 ipnet = { version = "2.3", optional = true }
 thiserror = { version = "1.0", optional = true }
