--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -50,7 +50,7 @@ ya-client = "0.6"
 ya-dummy-driver = "0.2"
 ya-erc20-driver = "0.3"
 ya-zksync-driver = "0.2"
-#ya-net = { version = "0.2", features = ["service"] }
+ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
 
 actix-rt = "1.0"
