--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -22,6 +22,7 @@ base64 = { version = "0.13" }
 chrono = { version = "0.4", features = ["serde"] }
 ethsign = { version = "0.8.0" }
 hex = { version = "0.4" }
+petname = { version = "1.1.2" }
 semver = { version = "1.0", features = ["serde"] }
 sha2 = { version = "0.9" }
 snailquote = { version = "0.3" }
