--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,9 @@ openssl-probe = { version = "0.1", optional = true }
 structopt = "0.3"
 tokio = {version = "0.2.22", features=["uds"]}
 url = "2.1.1"
+serde = "1.0"
+serde_json = "1.0"
+flexbuffers = "2.0"
 
 [package.metadata.deb]
 name="golem-requestor"
