--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -11,6 +11,9 @@ on:
       - release/*
       - sgx/*
 
+env:
+  rust_stable: 1.64.0
+
 jobs:
   build:
     name: SGX Unit Tests
@@ -26,10 +29,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Install last stable Rust
+      - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ env.rust_stable }}
 
       - name: Unit tests for SGX
         working-directory: exe-unit
