--- a/.github/workflows/integration-test-hybrid-net.yml
+++ b/.github/workflows/integration-test-hybrid-net.yml
@@ -22,6 +22,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: "Build binaries (x86-64) hybrid-net (ubuntu-latest)"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          intervalSeconds: 60
           timeoutSeconds: 7200
 
       - name: Fail if build was not a success ( ubuntu )
