--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "1.64.0"
 components = [ "rustfmt", "clippy" ]
-targets = [ "x86_64-linux-musl" ]
+targets = [ "x86_64-unknown-linux-musl" ]
