--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -57,12 +57,12 @@ serde_json = "1.0"
 shared_child = "0.3.4"
 signal-hook = "0.3"
 structopt = "0.3.20"
-strum ="0.24"
+strum = "0.24"
 strum_macros = "0.24"
 sys-info = "0.7.0"
 thiserror = "1.0.14"
 tokio = { version = "1", features = ["process", "signal"] }
-tokio-stream = {version = "0.1.6", features = ["sync"] }
+tokio-stream = { version = "0.1.6", features = ["sync"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 yansi = "0.5.0"
@@ -82,5 +82,6 @@ predicates = "2.1"
 serial_test = "0.9"
 shlex = "1.1"
 tempdir = "0.3"
+pretty_assertions = "1.3"
 
 ya-manifest-test-utils = "0.1"
