--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -23,3 +23,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1"
 thiserror = "1"
+uuid = { version = "1.2.2", features = ["v4"] }
+futures = "0.3"
