--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -20,10 +20,11 @@ actix-http = "3"
 anyhow = "1"
 log = "0"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["default"] }
 lazy_static = "1"
 thiserror = "1"
 uuid = { version = "1.2.2", features = ["v4"] }
 futures = "0.3"
 base64 = "0"
 flexbuffers = "2"
+bytes = "1"
