--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,10 @@ license = "GPL-3.0"
 edition = "2018"
 
 [features]
-default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
+default = ['erc20-driver', 'gftp/bin']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
-zksync-driver = ['ya-zksync-driver']
 tos = []
 # Temporary to make goth integration tests work
 central-net = ['ya-net/central-net']
@@ -30,7 +29,6 @@ ya-core-model = { version = "^0.8" }
 ya-dummy-driver = { version = "0.3", optional = true }
 ya-file-logging = "0.1"
 ya-erc20-driver = { version = "0.4", optional = true }
-ya-zksync-driver = { version = "0.3", optional = true }
 ya-identity = "0.3"
 ya-market = "0.4"
 ya-metrics = "0.2"
@@ -128,7 +126,6 @@ members = [
     "core/payment-driver/base",
     "core/payment-driver/dummy",
     "core/payment-driver/erc20",
-    "core/payment-driver/zksync",
     "core/persistence",
     "core/serv-api",
     "core/serv-api/cache",
@@ -173,7 +170,6 @@ ya-payment = { path = "core/payment" }
 ya-payment-driver = { path = "core/payment-driver/base" }
 ya-dummy-driver = { path = "core/payment-driver/dummy" }
 ya-erc20-driver = { path = "core/payment-driver/erc20" }
-ya-zksync-driver = { path = "core/payment-driver/zksync" }
 ya-version = { path = "core/version" }
 ya-vpn = { path = "core/vpn" }
 
