--- a/core/payment-driver/erc20/Cargo.toml
+++ b/core/payment-driver/erc20/Cargo.toml
@@ -40,9 +40,11 @@ ya-client-model = "0.5"
 ya-service-api-interfaces = "0.2"
 ya-utils-futures = "0.2"
 ya-utils-networking = "0.2"
+erc20_payment_lib = { path= "C:/scx1332/rust_erc20_payment/crates/erc20_payment_lib" }
 
 [dev-dependencies]
 actix-rt = "2.7"
 dotenv = "0.15.0"
 env_logger = "0.7.1"
+
 structopt = "0.3"
