--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,10 @@ tokio = { version = "1", features = ["net"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 tokio-stream = { version = "0.1.8", features = ["io-util"] }
 url = "2.1.1"
+# this entry is needed to make sqlx version >=0.5.9 work with diesel 1.4.*
+# diesel 1.4.* supports up to 0.23.0, but sqlx 0.5.9 requires 0.22.0
+# sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
+libsqlite3-sys = { version = "=0.22.2", features = ["bundled"] }
 
 [package.metadata.deb]
 name="golem-requestor"
