--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,6 @@ url = "2.1.1"
 
 [dev-dependencies]
 ya-test-framework = "0.1"
-serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
 
 [package.metadata.deb]
 name="golem-requestor"
@@ -163,7 +162,8 @@ members = [
     "utils/diesel-utils",
     "utils/fd-metrics",
     "core/metrics",
-    "test-utils/test-framework"
+    "test-utils/test-framework",
+    "test-utils/test-framework/framework-macro"
 ]
 
 [patch.crates-io]
@@ -228,6 +228,7 @@ ya-provider = { path = "agent/provider"}
 ## TEST UTILS
 ya-manifest-test-utils = { path = "utils/manifest-utils/test-utils" }
 ya-test-framework = { path = "test-utils/test-framework" }
+ya-framework-macro = { path = "test-utils/test-framework/framework-macro" }
 
 ethereum-tx-sign = { git = "https://github.com/mfranciszkiewicz/ethereum-tx-sign.git", rev = "1164c74187a9e2947faeaea7dde104c3cdec4195" }
 graphene-sgx = { git = " https://github.com/golemfactory/graphene-rust.git", rev = "dbd993ebad7f9190410ea390a589348479af6407" }
