--- a/test-utils/test-framework/Cargo.toml
+++ b/test-utils/test-framework/Cargo.toml
@@ -5,13 +5,16 @@ edition = "2021"
 
 
 [dependencies]
+actix-rt = "2.7"
 anyhow = "1"
 assert_cmd = "2.0"
 log = "0.4"
-tokio = "1"
+serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
+tokio = { version = "1", features = ["rt"] }
 url = "2.3"
 
 ya-utils-process = "0.2"
+ya-framework-macro = "0.1"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 libc="0.2.73"
