--- a/test-utils/test-framework/Cargo.toml
+++ b/test-utils/test-framework/Cargo.toml
@@ -9,6 +9,8 @@ actix-rt = "2.7"
 anyhow = "1"
 assert_cmd = "2.0"
 log = "0.4"
+serde = "1.0"
+serde_json = "1.0"
 serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
 tokio = { version = "1", features = ["rt"] }
 url = "2.3"
