Revert "Proposal: remove double checking CI after merge to master / release (#2421)"
This reverts commit 14ce6f6c362788371d11ea9403d5b9449aa8d48c.

--- a/.github/workflows/market-test-suite.yml
+++ b/.github/workflows/market-test-suite.yml
@@ -1,6 +1,10 @@
 name: Market Test Suite
 
 on:
+  push:
+    branches:
+      - master
+      - release/*
   pull_request:
     branches:
       - master
@@ -49,3 +53,4 @@ jobs:
         with:
           command: test
           args: --tests -p ya-market --features ya-market/test-suite --locked
+
