--- a/.github/workflows/integration-test-hybrid-net.yml
+++ b/.github/workflows/integration-test-hybrid-net.yml
@@ -34,7 +34,7 @@ jobs:
     needs: test_check
     defaults:
       run:
-        working-directory: './goth_tests'
+        working-directory: "./goth_tests"
 
     steps:
       - name: Checkout
@@ -45,13 +45,13 @@ jobs:
       - name: Configure Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8.0'
+          python-version: "3.8.0"
 
       - name: Configure Poetry
         uses: Gr1N/setup-poetry@v7
         with:
           poetry-version: 1.2.2
-          working-directory: './goth_tests'
+          working-directory: "./goth_tests"
 
       - name: Install dependencies
         run: |
@@ -83,7 +83,7 @@ jobs:
           workflow: binaries-x86-64-hybrid-net.yml
           commit: ${{github.event.pull_request.head.sha || github.sha}}
           workflow_conclusion: success
-          name: 'Yagna Linux hybrid-net'
+          name: "Yagna Linux hybrid-net"
           path: /tmp/yagna-build
 
       - name: Run test suite
