--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -17,22 +17,22 @@ documentation = "https://handbook.golem.network"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
+python = "^3.10"
 pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 #goth = "^0.11"
 # to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "76919b272681a7c4de23c0a903be8a2fa4ab8af1" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "bad4e9b0622004bc7d51fa2c6a9a517265c20267" }
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
+black = "^23.3"
 mypy = "^0.782"
 poethepoet = "^0.10.0"
 
 [tool.poe.tasks]
 codestyle = "black --check --diff ."
 goth-assets = "python -m goth create-assets assets"
-goth-tests = "pytest -svx . --reruns 3 --only-rerun AssertionError --only-rerun TimeoutError --only-rerun ApiException --only-rerun goth.runner.exceptions.TemporalAssertionError --only-rerun urllib.error.URLError --only-rerun goth.runner.exceptions.CommandError"
+goth-tests = "pytest -svx . --reruns 0 --only-rerun AssertionError --only-rerun TimeoutError --only-rerun ApiException --only-rerun goth.runner.exceptions.TemporalAssertionError --only-rerun urllib.error.URLError --only-rerun goth.runner.exceptions.CommandError"
 provider-tests = "pytest -svx ./domain/ya-provider"
 typecheck = "mypy ."
