--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -23,7 +23,7 @@ pytest-asyncio = "^0.21"
 pytest-rerunfailures = "^11.1.2"
 #goth = "^0.11"
 # to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "master" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d3617e4acce183e8c878d4c4f9b106222c251494" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
