--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -91,7 +91,7 @@ jobs:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           poetry run poe goth-assets
-          poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build --config-override docker-compose.compose-file=docker-compose-hybrid-net.yml
+          poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
