--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 env:
   rust_stable: 1.68.2
+  gvmkit-build_tag: v0.2.2
+  gvmkit-build_dir: gvmkit-build
 
 jobs:
   create-release:
@@ -56,6 +58,13 @@ jobs:
           - ubuntu
           - windows
           - macos
+        include:
+          - os: ubuntu
+            gvmkit-build_archive: gvmkit-build-x86_64-unknown-linux-gnu.tar.gz
+          - os: windows
+            gvmkit-build_archive: gvmkit-build-x86_64-pc-windows-msvc.zip
+          - os: macos
+            gvmkit-build_archive: gvmkit-build-x86_64-apple-darwin.tar.gz
 
     env:
       X86_64_PC_WINDOWS_MSVC_OPENSSL_DIR: c:/vcpkg/installed/x64-windows-static
@@ -124,12 +133,23 @@ jobs:
           (cd golem_cli && cargo build --bin golemsp -p golemsp --release --target x86_64-unknown-linux-musl)
           (cd agent/provider && cargo build --bin ya-provider -p ya-provider --release --target x86_64-unknown-linux-musl)
           (cd exe-unit && cargo build --bin exe-unit -p ya-exe-unit --release --features openssl/vendored --target x86_64-unknown-linux-musl)
+      - name: Download gvmkit-build
+        uses: robinraju/release-downloader@v1.8
+        with:
+          repository: golemfactory/gvmkit-build-rs
+          tag: ${{ env.gvmkit-build_tag }}
+          fileName: ${{ matrix.gvmkit-build_archive }}
+          extract: true
+          out-file-path: ${{ env.gvmkit-build_dir }}
+          tarBall: false
+          zipBall: false
       - name: Pack
         id: pack
         shell: bash
         env:
           OS_NAME: ${{ matrix.os }}
           GITHUB_REF: ${{ github.ref }}
+          GVMKIT_BUILD_DIR: ${{ env.gvmkit-build_dir }}
         run: |
           bash .ci/pack-build.sh
       - name: Upload Release Asset [Requestor]
@@ -199,13 +219,23 @@ jobs:
             --release
             --features static-openssl
             --target aarch64-unknown-linux-musl
-
+      - name: Download gvmkit-build
+        uses: robinraju/release-downloader@v1.8
+        with:
+          repository: golemfactory/gvmkit-build-rs
+          tag: ${{ env.gvmkit-build_tag }}
+          fileName: gvmkit-build-aarch64-unknown-linux-musl.tar.gz
+          extract: true
+          out-file-path: ${{ env.gvmkit-build_dir }}
+          tarBall: false
+          zipBall: false
       - name: Pack
         id: pack
         shell: bash
         env:
           OS_NAME: linux-aarch64
           GITHUB_REF: ${{ github.ref }}
+          GVMKIT_BUILD_DIR: ${{ env.gvmkit-build_dir }}
         run: |
           bash .ci/pack-build.sh
       - name: Upload Release Asset [Requestor]
