--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -20,10 +20,11 @@ bench = false
 schema = ["schemars"]
 
 [dependencies]
-ya-agreement-utils = "0.4.1"
+ya-agreement-utils = "0.5"
 ya-utils-path = "0.1"
 ya-client-model = "0.5"
-golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "50c98b6286b00ddc98ddd46157a26a03cfe0beec" }
+golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "ca411e003aa0ec56b49f52f193a2030b06543eff" }
+# golem-certificate = { path = "../../../golem-certificate" }
 
 regex = "1.5"
 serde = "1.0"
@@ -31,7 +32,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 thiserror = "1.0"
 anyhow = { version = "1.0" }
-base64 = { version = "0.13" }
+base64 = { version = "0.21" }
 chrono = { version = "0.4", features = ["serde"] }
 hex = { version = "0.4" }
 itertools = "0.10"
@@ -52,7 +53,7 @@ schemars = { version = "0.8", features = [
 [dev-dependencies]
 tempfile = "3"
 anyhow = "1.0"
-serial_test = "0.9"
+serial_test = "2"
 shlex = "1.1"
 tar = "0.4"
 test-case = "3.1"
